[package]
name = "adsb-index"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
color-eyre = "0.6.5"
csv = "1.3.1"
dotenvy = "0.15.7"
humantime = "2.2.0"
libflate = "2.1.0"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.20", features = ["http2", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
