[workspace]
resolver = "2"
members = ["adsbee-api-client", "adsbee-api-server", "adsbee-api-types", "adsbee-beast","adsbee-cli", "adsbee-mode-s", "adsbee-sbs", "adsbee-types"]

[workspace.dependencies.adsbee-api-client]
path = "adsbee-api-client"

[workspace.dependencies.adsbee-api-server]
path = "adsbee-api-server"

[workspace.dependencies.adsbee-api-types]
path = "adsbee-api-types"

[workspace.dependencies.adsbee-beast]
path = "adsbee-beast"

[workspace.dependencies.adsbee-mode-s]
path = "adsbee-mode-s"

[workspace.dependencies.adsbee-sbs]
path = "adsbee-sbs"

[workspace.dependencies.adsbee-types]
path = "adsbee-types"
