[package]
name = "adsb-index-api-client"
version = "0.1.0"
edition = "2024"

[dependencies.adsb-index-api-types]
path = "../adsb-index-api-types"
features = ["sqlx"]

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.20", features = ["json"] }
reqwest-websocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde"] }
