[package]
name = "adsb-index-api-server"
version = "0.1.0"
edition = "2024"

[dependencies.adsb-index-api-types]
path = "../adsb-index-api-types"
features = ["sqlx", "adsb_deku"]

[dev-dependencies]
approx = "0.5.1"

[dependencies]
adsb_deku = { version = "0.8.0", features = ["serde"], git = "https://github.com/rsadsb/adsb_deku.git", branch = "update-deku-0-19-1" }
axum = { version = "0.8.4", features = ["http2", "json", "ws"] }
bitflags = "2.9.1"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
futures-util = "0.3.31"
humantime = "2.2.0"
libflate = "2.1.0"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.20", features = ["http2", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "sync"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
