[package]
name = "adsb-index-api-types"
version = "0.1.0"
edition = "2024"

[dependencies]
adsb_deku = { version = "0.8.0", optional = true, git = "https://github.com/rsadsb/adsb_deku.git", branch = "update-deku-0-19-1" }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.13.0"
sqlx = { version = "0.8.6", features = ["postgres"], optional = true }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde"] }

[features]
default = []
sqlx = ["dep:sqlx"]
adsb_deku = ["dep:adsb_deku"]
