[package]
name = "adsb-index-client"
version = "0.1.0"
edition = "2024"

[dependencies.adsb-index-api-types]
path = "../adsb-index-api-types"
features = ["sqlx"]

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
reqwest-websocket = { version = "0.5.0", features = ["json"] }
thiserror = "2.0.12"
