[package]
name = "adsbee-api-server"
version = "0.1.0"
edition = "2024"

[dependencies.adsbee-api-types]
workspace = true
features = ["sqlx"]

[dependencies.adsbee-beast]
workspace = true

[dependencies.adsbee-types]
workspace = true
features = ["sqlx"]

[dependencies.adsbee-mode-s]
workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["http2", "json", "ws"] }
bitflags = "2.9.1"
bytemuck = { version = "1.23.1", features = ["derive"] }
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
futures-util = "0.3.31"
hex = "0.4.3"
humantime = "2.2.0"
libflate = "2.1.0"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.20", features = ["http2", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "sync", "process"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
