[package]
name = "adsbee-rtlsdr"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
bytes = "1.10.1"
futures-util = "0.3.31"
pin-project-lite = "0.2.16"
thiserror = "2.0.12"
tokio = { version = "1.46.0", default-features = false }
hex = { version = "0.4.3", optional = true }
tracing = "0.1.41"

[features]
command = ["tokio/process", "dep:hex"]
