[package]
name = "adsbee-types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_with = { version = "3.13.0", optional = true }
sqlx = { version = "0.8.6", features = ["postgres"], optional = true }
thiserror = "2.0.12"

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
sqlx = ["dep:sqlx"]
